# JC-ESP32P4-M3-DEV-FK

1-Demo/IDF-DEMO/NoDisplay/uvc_camera_ov5647/: .gitignore  ARCHITECTURE_MIGRATION.md  ARCHITECTURE_README.md  CAMERA_DEBUG_GUIDE.md  PROJECT_STRUCTURE.md  README.md  sdkconfig  sdkconfig.defaults.esp32p4  sdkconfig.isp_disable  sdkconfig.old
1-Demo/IDF-DEMO/NoDisplay/uvc_camera_ov5647/components/espressif__esp_video/src/: esp_video_init.c
1-Demo/IDF-DEMO/NoDisplay/uvc_camera_ov5647/components/espressif__esp_video/src/device/: esp_video_isp_device.c
1-Demo/IDF-DEMO/NoDisplay/uvc_camera_ov5647/components/os/: event_handler_task.c  os_startup.c
1-Demo/IDF-DEMO/NoDisplay/uvc_camera_ov5647/components/os/include/: os_interface.h  os_service.h
1-Demo/IDF-DEMO/NoDisplay/uvc_camera_ov5647/components/uvc/: CMakeLists.txt
1-Demo/IDF-DEMO/NoDisplay/uvc_camera_ov5647/components/uvc/include/: uvc_app_common.h
1-Demo/IDF-DEMO/NoDisplay/uvc_camera_ov5647/main/: CMakeLists.txt  Kconfig.projbuild  app_tasks.c  app_tasks.h  camera_debug.c  camera_task.c  encoding_task.c  idf_component.yml  main.c  monitor_task.c  os_cfg.c  os_interface.h  uvc_app_common.c  uvc_app_common.h  uvc_example.c  uvc_example.h  uvc_stream_task.c
10-Apps/uvc_camera_ov5647/: CONTRIBUTING.md  sdkconfig
10-Apps/uvc_camera_ov5647/components/camera/: CMakeLists.txt
10-Apps/uvc_camera_ov5647/components/camera/include/: camera_debug.h
10-Apps/uvc_camera_ov5647/components/os/: CMakeLists.txt  monitor_task.c
10-Apps/uvc_camera_ov5647/components/uvc/: uvc_stream_task.c
10-Apps/uvc_camera_ov5647/components/video/: CMakeLists.txt
9-Output/1-camera-ov5647-isp/: camera_log.txt
